tests/Checker/everything/errors/11b.sol
======= The VC compiler =======

Pass 1: Lexical and syntactic Analysis
Pass 2: Semantic Analysis
ERROR: 0(0)..0(0): *11: attempt to use an array/function as a scalar
Compilation was unsuccessful.
